src/components/Navbar.css
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.9);
  padding: 1rem 0;
  z-index: 100;
  display: flex;
  justify-content: center;
  opacity: 0;
  transform: translateY(-100%);
  transition: opacity 0.3s ease, transform 0.3s ease;
}

/* Show navbar after scrolling to About section */
.navbar.visible {
  opacity: 1;
  transform: translateY(0);
}

/* Navigation links container */
.nav-links {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
}

/* Styling for links */
.nav-links a {
  text-decoration: none;
  color: white;
  margin: 0 1rem;
  font-size: 1.2rem;
  transition: color 0.3s ease, transform 0.3s ease;
}

/* Hover effect for links */
.nav-links a:hover {
  color: #faf8f8; 
  transform: scale(1.1); 
}

/* @media (max-width: 768px) {
  
  .nav-links {
    width: 80%; 
    justify-content: space-evenly; 
  }

  .nav-links a {
    font-size: 1rem; 
    margin: 0 0.5rem; 
  }
}

@media (max-width: 480px) {
  .nav-links {
    width: 100%;
    justify-content: space-evenly; 
  }

  .nav-links a {
    font-size: 0.9rem; 
    margin: 0 0.3rem; 
  }
} */

